fix:increase quick search z-index
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@4920 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -150,7 +150,7 @@ body, html, #main-view, #sub-view-wrapper {
   bottom: 0;
   left: 0;
   background-color: #FFF;
-  z-index: 10;
+  z-index: 22;
 }
 
 .white-bg {
